tests/sources/invalid/operators/logical_and_increment_errors.fire
// Unary '!' / '&&'/'||' operand-type errors, and increment/decrement on an
// undefined identifier.

a: int32 = 5;
b: bool = !a;  //~ ERROR FS-SEM-0010 @11

c: bool = true && a;  //~ ERROR FS-SEM-0010 @16

d: bool = a || true;  //~ ERROR FS-SEM-0010 @13

undefined_var++;  //~ ERROR FS-PARSE-0003 @1
